Bug 315066 - bluedevil-sendfile crashes when sending a file
Summary: bluedevil-sendfile crashes when sending a file
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: 4.9.5
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-13 13:43 UTC by Jiri Slaby
Modified: 2013-03-10 18:40 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jiri Slaby 2013-02-13 13:43:58 UTC
+++ This bug was initially created as a clone of Bug #297785 +++

See  attachment 77253 [details].

bluedevil-sendfile (0.1) on KDE Platform 4.9.5 "release 7" using Qt 4.8.4 - What I was doing when the application crashed: bluedevil-sendfile -f L2cap.jar -k 00:24:7D:65:55:C5 -- Backtrace (Reduced): #5 Private (other=..., this=0x7fff1c89bdf0) at kernel/qvariant.h:356 #6 QVariant::QVariant (this=0x7fff1c89bdf0, p=...) at kernel/qvariant.cpp:1423 #7 0x00007f8ead4818e5 in QDBusPendingReplyData::argumentAt (this=0x7fff1c89bf40, index=0) at qdbuspendingreply.cpp:270 #8 0x00007f8eadb8a6c0 in QDBusPendingReply<QMap<QString, QVariant>, void, void, void, void, void, void, void>::argumentAt<0> (this=this@entry=0x7fff1c89bf40) at /usr/include/QtDBus/qdbuspendingreply.h:176 #9 0x00007f8eadb856ee in value (this=0x7fff1c89bf40) at /usr/include/QtDBus/qdbuspendingreply.h:181

I grabbed the output you request there, but I cannot unset the needinfo flag in there, so creating a new bug.

> Just did a few releases, you can test this with: 1.1.4, 1.2.3 and 1.3-rc2, > can you provide the following info? > > Execute: kdebugdialog and actiavte bluedevilsendfile > Execute bluedevil-sendifle from the command line > > Paste here any ourput. bluedevilsendfile(8923) SendFileWizard::SendFileWizard: DeviceUbi: "00:24:7D:65:55:C5" bluedevilsendfile(8923) SendFileWizard::SendFileWizard: Files bluedevilsendfile(8923) SendFileWizard::SendFileWizard: ("L2cap.jar") KCrash: Application 'bluedevil-sendfile' crashing... KCrash: Attempting to start /usr/lib64/kde4/libexec/drkonqi from kdeinit
Comment 1 Jiri Slaby 2013-02-13 14:05:21 UTC
Ok, the url should be "bluetooth://00:24:7D:65:55:C5". It should not crash however.
Comment 2 Alex Fiestas 2013-03-06 21:58:49 UTC
Agreed, I'm working on a fix and will be released in 1.3.1
Comment 3 Jiri Slaby 2013-03-07 09:48:52 UTC
FWIW it happens also with UUID. If I pass a wrong one, it crashes too. But I think it's the same bug. But perhaps different code paths?
Comment 4 Alex Fiestas 2013-03-10 18:40:37 UTC
Git commit 630790032694f26f68cbd453403820bc16e02c1a by Àlex Fiestas.
Committed on 10/03/2013 at 19:37.
Pushed by afiestas into branch 'master'.

Do not crash on not ready devices and better url handling

Basically support:
bluetooth://CA:FE:CA:FE:CA:FE
bluetooth://CA-FE-CA-FE-CA-FE
bluetooth://CA-FE-CA-FE-CA-FE/12-123-123-123-123-123-123-

Un the future I will remove support for everything but one way, does
not make sense supporting all this just for the sake of it.

Also, this commit makes BlueDevil 1.3 need libbluedevil master, at
least 6756dd03112

M  +32   -18   src/actionplugins/sendfile/helper/sendfilewizard.cpp
M  +1    -0    src/actionplugins/sendfile/helper/sendfilewizard.h

http://commits.kde.org/bluedevil/630790032694f26f68cbd453403820bc16e02c1a