Do not crash on not ready devices and better url handling

Basically support:
bluetooth://CA:FE:CA:FE:CA:FE
bluetooth://CA-FE-CA-FE-CA-FE
bluetooth://CA-FE-CA-FE-CA-FE/12-123-123-123-123-123-123-

Un the future I will remove support for everything but one way, does
not make sense supporting all this just for the sake of it.

Also, this commit makes BlueDevil 1.3 need libbluedevil master, at
least 6756dd03112

BUG:315066